--- a/server/.env.example
+++ b/server/.env.example
@@ -1,6 +1,6 @@
 PORT=4000
 NODE_ENV=development
 FRONTEND_URL=http://localhost:3000
-# Database
 DATABASE_URL="postgresql://USER:PASSWORD@HOST:PORT/DATABASE?schema=public"
-
+JWT_SECRET=your_secret_key
+USE_HTTPS=false
