--- a/server/package.json
+++ b/server/package.json
@@ -36,7 +36,6 @@
     "eslint-plugin-import": "^2.32.0",
     "globals": "^17.3.0",
     "prettier": "^3.8.1",
-    "prisma": "^7.4.0",
     "ts-node": "^10.9.2",
     "tsc-alias": "^1.8.16",
     "tsx": "^4.21.0",
@@ -51,6 +50,7 @@
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.6",
     "dotenv": "^17.3.1",
+    "prisma": "7.4.0",
     "express": "^5.2.1",
     "jsonwebtoken": "^9.0.3",
     "tsconfig-paths": "^4.2.0",
