--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -11,6 +11,7 @@
     "baseUrl": ".",
 
     "paths": {
+      "src/*": ["src/*"],
       "@controllers/*": ["src/controllers/*"],
       "@generated/*": ["src/generated/*"],
       "@config/*": ["src/config/*"],
